--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,9 @@ install:
   fi
 - conda config --add channels conda-forge;
 - conda config --set always_yes yes;
-- conda update -n root conda
 - if ! command -v pygmentize > /dev/null; then conda install pygments; fi
 - if ! command -v tectonic > /dev/null; then conda install tectonic; fi
-- conda update --all
+- conda update conda --all
 script:
 - bash bin/report
 deploy:
