--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,10 @@ install:
     bash miniconda.sh -b -p $HOME/miniconda -u;
   fi
 - conda config --add channels conda-forge;
-- conda config --set always_yes yes;
+- conda config --set always_yes yes --set channel_priority no;
 - if ! command -v pygmentize > /dev/null; then conda install pygments; fi
 - if ! command -v tectonic > /dev/null; then conda install tectonic; fi
-- conda update conda --all --no-channel-priority
+- conda update conda --all
 script:
 - bash bin/report
 deploy:
